@@ -10,6 +10,7 @@ linux (4.19.16-2) UNRELEASED; urgency=medium
   * debian/rules.d, debian/rules.real: Restore build of userland headers for
     tools
   * debian/rules.d: Delete now-unused recursive makefiles
+  * debian/rules.d/tools/perf/Makefile: Delete redundant arch/profile checks
 
  -- Luca Boccassi <bluca@debian.org>  Fri, 18 Jan 2019 19:09:06 +0000
 
